fixing alignment and positioning

--- a/styles.css
+++ b/styles.css
@@ -10,11 +10,12 @@ cyan - 	#006970
 dark cyan - 	#004241
 */
 
-img,
-h1,
-p,
-div {
-  margin-left: 40px;
+.main-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 10px 5px 10px 5px;
 }
 
 h1 {
@@ -23,39 +24,35 @@ h1 {
   color: #f2f2f2;
   font-weight: 700;
   font-size: 2em;
-}
-
-.main-container {
-  display: flex;
-  flex-direction: column;
+  max-width: 200px;
 }
 
 section {
   max-width: 320px;
-  padding-top: 40px;
-  padding-bottom: 40px;
+  padding: 45px;
+  height: 350px;
 }
 
 section:nth-of-type(1) {
   background-color: #e38826;
   border-top-left-radius: 10px;
-  border-bottom-left-radius: 10px;
+  border-top-right-radius: 10px;
 }
 section:nth-of-type(2) {
   background-color: #006970;
 }
 section:nth-of-type(3) {
   background-color: #004241;
-  border-top-right-radius: 10px;
+  border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
 }
 
 p {
   max-width: 240px;
+  height: 130px;
   font-weight: 400;
   font-size: 0.9em;
   line-height: 1.6em;
-  padding-bottom: 10px;
 }
 
 section > a > div {
@@ -92,17 +89,27 @@ section:nth-of-type(3) > a > div {
   color: #004241;
 }
 
-@media screen and (min-width: 380px) {
+@media screen and (min-width: 769px) {
   .main-container {
     display: flex;
     flex-direction: row;
   }
   section {
-    min-width: 275px;
-    padding-top: 40px;
-    padding-bottom: 40px;
+    min-width: 190px;
   }
   p {
     max-width: 230px;
+  }
+  section:nth-of-type(1) {
+    background-color: #e38826;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 0;
+    border-bottom-left-radius: 10px;
+  }
+  section:nth-of-type(3) {
+    background-color: #004241;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 0;
   }
 }
